# dip-work-bench

./: .gitignore  README.md  current_project_state.md  pyproject.toml
.github/workflows/: quality.yml
docs/: development.md
report_outputs/: REPORT.md
report_outputs/M01-01/: analysis.md  metadata.json
report_outputs/M01-02/: analysis.md  metadata.json
report_outputs/M01-03/: analysis.md  metadata.json
report_outputs/M02-02/: analysis.md  metadata.json
report_outputs/M03-01/: analysis.md  metadata.json
report_outputs/M03-03/: analysis.md  gamma_curve_0_6.csv  gamma_curve_1_8.csv  metadata.json
report_outputs/M04-01/: analysis.md  grayscale_histogram.csv  metadata.json  rgb_histogram.csv
report_outputs/M04-02/: analysis.md  equalization_mapping.csv  histogram_comparison.csv  input_cdf.csv  metadata.json
report_outputs/M05-01/: analysis.md  metadata.json
report_outputs/M05-05/: analysis.md  flipped_kernel.csv  metadata.json  resolved_kernel.csv
report_outputs/M06-01/: analysis.md  metadata.json
report_outputs/M06-02/: analysis.md  metadata.json
report_outputs/M06-03/: analysis.md  laplacian_kernel.csv  metadata.json
report_outputs/M06-04/: analysis.md  laplacian_kernel.csv  metadata.json
report_outputs/M06-05/: analysis.md  metadata.json
report_outputs/M06-06/: analysis.md  metadata.json
report_outputs/M07-01/: analysis.md  metadata.json
report_outputs/M07-03/: analysis.md  metadata.json
scripts/: check.py  generate_lena_report.py  verify_environment.py  verify_registry.py
src/dip_workbench/: __init__.py  (+2 more)
tests/: test_package.py
(+216 files in other folders)
