[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dip-workbench"
version = "0.1.0"
description = "Interactive desktop workbench for demonstrating digital image processing operations."
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==2.4.6",
    "opencv-python-headless==5.0.0.93",
    "pyqtgraph==0.14.0",
    "PySide6==6.11.1",
]

[project.optional-dependencies]
dev = [
    "mypy==2.2.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-qt==4.5.0",
    "ruff==0.15.21",
]

[project.scripts]
dip-workbench = "dip_workbench.application:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -ra"
qt_api = "pyside6"

[tool.coverage.run]
branch = true
source = ["dip_workbench"]

[tool.coverage.report]
show_missing = true
